# kptncook

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  beadsflow.toml  justfile  mkdocs.yml  pyproject.toml
.beads/: issues.jsonl  last-touched
.github/workflows/: ci.yml
kptncook/: __init__.py  api.py  config.py  mealie.py  models.py  paprika.py  repositories.py  tandoor.py
notebooks/: api_search_tests.ipynb  debug_httpx.ipynb  delete_all_mealie_via_api.ipynb  from_kptncook_to_mealie.ipynb  get_or_create_units_from_ingredients.ipynb  issue_25_broken_urls.ipynb  kptncook_from_api.ipynb  parse_id.ipynb  test_new_headers.ipynb
scripts/: import_github_issues_to_beads.py
specs/: 2026-01-22_access_token.md
src/: kptncook_setup.py
src/kptncook/: __init__.py  api.py  cli.py  config.py  env.py  exporter_utils.py  http_client.py  http_errors.py  ingredient_groups.py  loc.py  markdown_exporter.py  mealie.py  models.py  paprika.py  password_manager.py  release.py  repositories.py  setup.py  tandoor.py
src/kptncook/services/: __init__.py  discovery.py  repository.py  workflows.py
src/kptncook_setup/: __init__.py
templates/: paprika.jinja2.json
tests/: api_test.py  cli_test.py  config_test.py  conftest.py  discovery_api_test.py  env_test.py  exporter_utils_test.py  ingredient_groups_test.py  markdown_exporter_test.py  mealie_test.py  paprika_test.py  parse_id_test.py  parse_kptncook_recipe_test.py  password_manager_test.py  release_test.py  repositories_test.py  tandoor_test.py  test_api_favorites.py  test_backup_favorites.py  to_mealie_test.py  version_test.py  workflows_test.py
tests/fixtures/: kptncook_example.json  kptncook_example_minimal.json
