[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "kptncook"
authors = [
    {name = "Jochen Wersdörfer", email = "jochen-kptncook@wersdoerfer.de"},
]
dynamic = ["version", "description"]
requires-python = ">=3.9"
keywords = [
    "cooking",
    "scraping",
    "client",
    "cli",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "httpx >= 0.22",
    "feedparser >= 6",
    "rich >= 11.1.0",
    "pydantic[dotenv] >= 1.9",
    "typer >= 0.4",
    "click",
]

[project.optional-dependencies]
test = [
    "pytest >= 6",
    "pytest-cov >= 3",
]
doc = [
    "mkdocs >= 1.2",
]
dev = [
    "jupyterlab >= 3.2.9",
]

[project.urls]
Home = "https://github.com/ephes/kptncook"

[tool.isort]
profile = "black"
known_third_party = ["pydantic", "rich"]

[project.scripts]
kptncook = "kptncook:cli"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = "tests"
