[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "kptncook"
authors = [
    {name = "Jochen Wersdörfer", email = "jochen-kptncook@wersdoerfer.de"},
]
dynamic = ["version", "description"]
requires-python = ">=3.10"
keywords = [
    "cooking",
    "scraping",
    "client",
    "cli",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx >= 0.22",
    "feedparser >= 6",
    "rich >= 11.1.0",
    "pydantic > 2",
    "pydantic-settings",
    "typer >= 0.4",
    "click",
    "unidecode",
    "jinja2"
]

[project.optional-dependencies]
test = [
    "pytest >= 6",
    "pytest-cov >= 3",
    "pytest-mock",
]
doc = [
    "mkdocs >= 1.2",
]
dev = [
    "jupyterlab >= 3.2.9",
    "mypy",
    "pre-commit"
]

[project.urls]
Home = "https://github.com/ephes/kptncook"

[tool.isort]
profile = "black"
known_third_party = ["pydantic", "rich"]

[project.scripts]
kptncook = "kptncook:cli"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = "tests"
filterwarnings = [
    "ignore::DeprecationWarning:pydantic",
]
