[build-system]
requires = ["uv_build>=0.7.8,<0.8.0"]
build-backend = "uv_build"

[project]
name = "kptncook"
version = "0.0.23"
description = "kptncook is a little command line utility to download new recipes."
authors = [
    {name = "Jochen Wersdörfer", email = "jochen-kptncook@wersdoerfer.de"},
]
requires-python = ">=3.10"
keywords = [
    "cooking",
    "scraping",
    "client",
    "cli",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx >= 0.22",
    "feedparser >= 6",
    "rich >= 11.1.0",
    "pydantic > 2",
    "pydantic-settings",
    "typer >= 0.4",
    "click",
    "unidecode",
    "jinja2"
]

[dependency-groups]
dev = [
    "jupyterlab >= 3.2.9",
    "mkdocs >= 1.2",
    "mypy",
    "pre-commit",
    "pytest >= 6",
    "pytest-cov >= 3",
    "pytest-mock",
]

[project.urls]
Home = "https://github.com/ephes/kptncook"

[project.scripts]
kptncook = "kptncook:cli"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = "tests"
filterwarnings = [
    "ignore::DeprecationWarning:pydantic",
]
